# image_pyconverter_cli

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  app.py  rename.py  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-prod.yml  publish-test.yml  python-prod-publish-ci.yml  python-test-ci.yml  python-test-publish-ci.yml  test-ci.yml
lib/: __init__.py  rename.py  resize.py
mypackage/: app.py
mypackage/lib/: __init__.py  rename.py  resize.py
mypackage/utils/: with_statement.py
mypackages/: app.py
mypackages/lib/: __init__.py  rename.py  resize.py
mypackages/utils/: with_statement.py
package/lib/: rename.py  resize.py
src/: app.py
src/lib/: __init__.py  rename.py  resize.py
src/tests/: conftest.py  test_rename.py
src/tests/lib/: test_rename.py
src/tests/test_lib/: test_rename.py
src/tests/test_utils/: test_stdout.py  test_utils.py
src/tests/utils/: test_utils.py  test_with_statements.py
src/utils/: __init__.py  constants.py  rename.py  stdout.py  tests.py  with_statement.py  with_statements.py
utils/: common.py  constants.py
