[metadata]
name=image_pyconverter_cli
version=1.0.0

[options]
zip_safe = False
;include_package_data = True
packages = find:
;package_dir=
;    =mypackage
install_requires =
    Pillow
    jaconv

[options.packages.find]
;where=mypackage
;include=mypackage*  # * by default
;exclude=mypackage.tests*  # empty by default

[options.entry_points]
console_scripts =
    ic_rename = mypackage:app:rename
    ic_resize = mypackage:app:resize