[metadata]
name=image_pyconverter_cli
version=1.0.0

[options]
zip_safe = False
;include_package_data = True
packages = find:
where = src
;package_dir=
;    =src
install_requires =
    Pillow
    jaconv

[options.packages.find]
;where=src
;include=src*  # * by default
;exclude=src.tests*  # empty by default

[options.entry_points]
console_scripts =
    ic_rename = app:rename
    ic_resize = app:resize