[metadata]
name=image_pyconverter_cli
version=1.0.0
author='ShuntaH'

;[options]
;;zip_safe = False
;packages = find:
;;package_dir =
;;    = src
;where = src
;install_requires =
;    Pillow
;    jaconv
;
;[options.entry_points]
;console_scripts =
;    ic_rename = app:rename
;    ic_resize = app:resize


;[metadata]
;license-file = LICENSE
;
;[wheel]
;universal = 1
;
;[aliases]
;test = pytest
;
;[tool:pytest]
;addopts = --ignore=fire/test_components_py3.py
;          --ignore=fire/parser_fuzz_test.py
;
;[pytype]
;inputs = .
;output = .pytype